---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
▌deleted    to-delete…                                                          |
                                                                                |
 Recent commits                                                                 |
 0341425 main add to-delete                                      Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git restore --staged to-delete                                                |
styles_hash: 9ebc3e96897ceb0e
